Change history
--------------

Release Candidate 3
===================

- Applied patch by Oleg Snurnikov fixing MR-319
  "MockResponse - basic implementation of Redirect, Write, BinaryWrite and Clear overloads"

- Applied patch by Chirs Ortman fixing MR-296
  "Dont get validation summary when binding with AR attribute but controller inherits smart dispatcher controller"

- Applied patch by Rafael Teixeira fixing MR-298
  "ColumnRenderer with an empty enumeration still renders table start and end sections"

- Fixed MR-300
  "DataBindAttribute in a ARSmartDispatcherController inherit the behavior from ARDataBinder"

- Applied minor patch by James Su fixing MR-303
  "Behavior is not consistent between FormToAttributed and LinkToAttributed in HtmlHelper"

- Applied goodwill's patch adding cookie support to BaseControllerTest MR-304

- Applied goodwill's patch fixing MR-305
  "fValidate fix a bug on unassociated label for element"

- Applied Oleg Snurnikov's patch fixing MR-306
  "PrototypeWebValidator - regular expression validation"

- Fixed MR-311 
  "The '\' character in templates goes unescaped when processed via NJS"

- The DefaultUrlBuilder now accepts a basePath parameter, which basically overrides the path information.

- Fixed MR-317
  "ARDataBind handles BelongsTo attribute in Nested component incorrectly."

- FlashBinderAttribute was removed as I doesnt work with the new 
  MonoRail design (changed to make the cache support work)

- Applied Tim Haines' patch adding TextAreaValue to FormHelper 

- Fixed MR-281 
  "View components params problem"

- Applied Markus Zywitza's patch adding a Fold method to TextHelper. 
  His description "Shortens a text to the specified length (using full words only and
adding an ellipsis at the end) and wraps it into a span-element that
has the title-property with the full text associated. This is
convenient for displaying properties in tables that might have very